bug fixes
-bug for uneven flex boxes fixed
-just need to create a div to even out a unit for the collection

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html,body {
     background-color: #683B2B;
     font-family: Open-Sans;
     min-width: fit-content;
-    overflow-x: scroll; /*Change this to edit space between x-axis*/
+    /* overflow-x: scroll;  */
     /* position: ; */
 }
 
@@ -161,22 +161,12 @@ html,body {
 .second-sectional{
     display: flex;
     width: 100%;
-    min-height: 30em;
+    /* min-height: 30em; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #D49E8D;
 }
-/* .second-sectional-container {
-    display: flex;
-    flex-direction: column;
-    max-width: 1250px;
-    width: 90vw;
-    height: 90vh;
-    align-items: center;
-    /* height:fit-content; 
-    
-}*/
 
 .second-sectional-container h2{
     font-size: 2.5vw;
@@ -186,11 +176,13 @@ html,body {
     display: flex;
     /* flex-grow: 1; */
     flex-direction: row;
+    margin-left: 1%;
+    margin-right: 1%;
     /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
     /* width: 90%; */
-    /* height: 70%; */
+    /* height: 100%; */
     /* padding-bottom: 2%; */
 
 }
@@ -199,6 +191,7 @@ html,body {
     display: flex;
     width: 25%;
     height: 100%;
+    margin: 1%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -208,19 +201,14 @@ html,body {
 }
 
 .passion-image{
-    /* flex-grow: 1; */
-    max-width:90%;
-    max-height: 85%;
-    /* min-width: 90%; */
-    /* max-height: 85%; */
-    /* min-height: 75%; */
-    /* min-width: 85%; */
+    width: 100%;
+    height: 100%;
     border-radius: .75rem;
     object-fit: fill;
 }
 .passion-label{
     font-size: min(20px,2vw);
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 
 /* End of Second Sectional */
@@ -319,7 +307,7 @@ html,body {
   }
 .experience-label{
     font-size: 1.3vw;
-    font-weight: 400;
+    font-weight: bold;
 }
 /*------------------------------------------------------------------*/
 
